--- a/css/white.css
+++ b/css/white.css
@@ -5,23 +5,17 @@
         height: 60px;
     }
     #results {
-        margin-top: 62px;
+        margin-top: 45px;
     }
     #theme_btn {
         height: 30px !important;
         width: 30px !important;
     }
 }
-body {
-    background: #EEEEEE;
-    color: #000000;
-}
 
 /***top***/
 
 .navbar {
-    background: #ffffff;
-    border: none;
     border-radius: 0px;
 }
 .navbar-brand-centered {
@@ -47,39 +41,38 @@ body {
 
 .nav-tabs {
     border: none;
-    margin: 0 0 20px 0;
+    /*    margin: 0 0 20px 0;*/
 }
 .nav-tabs>li {
     width: 33.33333%;
 }
 .nav-tabs>li>a {
     border: 2px solid transparent !important;
-    border-bottom: 2px solid grey !important;
+    /*    border-bottom: 2px solid grey !important;*/
     border-radius: 0;
+    margin-right: 0px;
+    background-color: #CCCCCC;
     color: #000000;
     text-align: center;
+    font-weight: bold;
     padding: 10px 0px;
 }
 .nav-tabs>li>a:hover {
-    border-bottom: 2px solid #8ACCEE !important;
-    background: transparent !important;
+    background: #E6E6E6;
     color: #5771B3 !important;
 }
 .nav-tabs>li.active>a,
 .nav-tabs>li.active>a:focus {
-    background: transparent;
-    border-bottom: 2px solid #6698B1 !important;
+    background: #F5F5F5 !important;
+    /*    border-bottom: 2px solid #6698B1 !important;*/
     color: #4B6199;
-}
-.list-group-item {
-    background: none;
 }
 #editor {
     position: absolute;
     bottom: 16px;
     left: 16px;
     right: 16px;
-    outline: 1px solid grey;
+    border: 1px solid #F5F5F5;
 }
 .codeBody {
     font-size: 12px;
@@ -87,12 +80,11 @@ body {
 }
 .indentable {}
 .codeTable {
-    color: #000000;
-    border: none;
+    border-radius: 0;
+    border: 1px solid #F5F5F5;
 }
 .codeTable thead tr th {
-    background-color: #bdbdbd;
-    color: #000000;
+    background-color: #F5F5F5;
     border: none;
 }
 .codeTable tbody tr td {
@@ -100,25 +92,22 @@ body {
     padding-bottom: 0;
     padding-left: 0;
     padding-right: 5px;
-    background-color: #F4EFED;
+    background-color: #FFFFFF;
     border: none;
 }
 .codeTable tbody>tr.warning>td {
-    background-color: #F6DD8B !important;
+    background-color: #fff8e1 !important;
 }
 .codeTable tbody > tr > td:first-child {
     background-color: #e0e0e0;
     color: #424242;
-}
-.highlightCode {
-    background-color: #F6DD8B;
 }
 .highlightProcName {
     background-color: #A20044;
     color: #F4ECE9;
 }
 .highlightVarName {
-    background-color: #512da8;
+    background-color: #4527a0;
     color: #F4ECE9;
 }
 .highlightCost {
@@ -126,40 +115,45 @@ body {
     color: #F4ECE9;
 }
 stmtNum {
-    color: #455a64;
+    color: #546e7a;
 }
 procedure {
-    color: #388e3c;
+    color: #00695c;
 }
 procName {
     color: #A20044;
 }
 varName {
-    color: #512da8;
+    color: #4527a0;
 }
 const {
     color: #827717;
 }
 call {
-    color: #00649D;
+    color: #1565c0;
 }
 if {
-    color: #00649D;
+    color: #1565c0;
 }
 then {
-    color: #00649D;
+    color: #1565c0;
 }
 else {
-    color: #00649D;
+    color: #1565c0;
 }
 while {
-    color: #00649D;
+    color: #1565c0;
 }
 assignment {
     color: #000000;
 }
 bool {
     color: #dd2c00;
+}
+#cfg.list-group>.list-group-item {
+    background-color: #F5F5F5;
+    border-radius: 0px;
+    border: none;
 }
 .mermaid {
     cursor: pointer;
@@ -170,14 +164,17 @@ bool {
     margin: 0 auto;
 }
 .mermaid path {
-    fill: #1497BB;
-    stroke: #1497BB !important;
+    fill: #4D6199;
+    stroke: #4D6199 !important;
 }
-.node rect,
-.node circle,
-.node polygon {
+.node circle {
     fill: none;
-    stroke: #1497BB;
+    stroke: #4D6199;
+    stroke-width: 2px;
+}
+.node rect {
+    fill: none;
+    stroke: #A20044;
     stroke-width: 2px;
 }
 .mermaid .label {
@@ -197,48 +194,48 @@ bool {
 }
 .dropdown-menu>li>a {}
 .btn.btn-default {
-    color: white;
-    background: #129889;
+    /*    color: white;*/
+    /*    background: #129889;*/
     border-radius: 0px;
 }
 .btn.btn-default:hover {
-    background: #15B09E;
+    /*    background: #15B09E;*/
 }
 .spacer {
     margin-top: 20px;
     /* define margin as you see fit */
 }
 .panel {
-    background: transparent;
-    color: #000000;
+    /*    background: transparent;*/
+    /*    color: #000000;*/
     border-radius: 0px;
-    border: none;
+    /*    border: none;*/
 }
 .panel-heading {
-    background: transparent;
-    color: #000000;
+    /*    background: transparent;*/
+    /*    color: #000000;*/
     border-radius: 0px;
-    border: 1px solid #666666;
+    /*    border: 1px solid #666666;*/
 }
 .panel-default>.panel-heading {
-    background-color: #e0e0e0;
-    color: #000000;
-    border-color: #666666;
+    /*    background-color: #e0e0e0;*/
+    /*    color: #000000;*/
+    /*    border-color: #666666;*/
 }
 .panel>.table-bordered,
 .panel>.table-bordered>tbody>tr>th,
 .panel>.table-bordered>tbody>tr>td {
-    border: 1px solid #666666;
+    /*    border: 1px solid #666666;*/
 }
 .table>tbody>tr>td.warning {
-    background-color: #F6DD8B;
+    background-color: #fff8e1;
 }
 #tuplesResult {
     margin: 2px 0;
 }
 #tuplesResult li {
     text-align: center;
-    border: 1px solid #6D6D6D;
+    /*    border: 1px solid #6D6D6D;*/
 }
 .list-inline {
     margin-bottom: 0;
