--- a/css/black.css
+++ b/css/black.css
@@ -20,7 +20,7 @@ body {
 /***top***/
 
 .navbar {
-    background: #1C1C26;
+    background: #191919;
     border: none;
     border-radius: 0px;
 }
@@ -71,7 +71,7 @@ body {
 .nav-tabs>li.active>a:focus {
     background: #383838 !important;
     /*    border-bottom: 2px solid #6698B1 !important;*/
-    color: floralwhite;
+    color: #9fa8da !important;
 }
 .list-group-item {
     background: transparent;
@@ -121,7 +121,7 @@ body {
     color: #3A3D48;
 }
 .highlightVarName {
-    background-color: #8183CB;
+    background-color: #A27FAD;
     color: #3A3D48;
 }
 .highlightCost {
@@ -132,37 +132,37 @@ stmtNum {
     color: #CCCCCC;
 }
 procedure {
-    color: #83C057;
+    color: #A6B243;
 }
 procName {
     color: #EC83C0;
 }
 varName {
-    color: #8183CB;
+    color: #A27FAD;
 }
 const {
     color: #EDCC67;
 }
 call {
-    color: #00A1BE;
+    color: #6F90B0;
 }
 if {
-    color: #00A1BE;
+    color: #6F90B0;
 }
 then {
-    color: #00A1BE;
+    color: #6F90B0;
 }
 else {
-    color: #00A1BE;
+    color: #6F90B0;
 }
 while {
-    color: #00A1BE;
+    color: #6F90B0;
 }
 assignment {
     color: #E6E6E6;
 }
 bool {
-    color: #F65E3D;
+    color: #DE9355;
 }
 #cfg.list-group>.list-group-item {
     background-color: #383838;
